--- a/index.html
+++ b/index.html
@@ -336,13 +336,35 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
         <div class="modal">
             <button class="close" data-modal-close>
                 <svg class="close-icon">
                         <use href="./images/symbol-defs.svg#icon-close"></use>
                 </svg>
             </button>
+            <form class="modal-form">
+                <p>Leave your contacts and we will call you back</p>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc">Name</span>
+                    <input class="modal-form-input" type="text" name="user_name" required pattern="^[a-zA-Zа-яА-Я]+$">
+                </label>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc">Phone</span>
+                    <input class="modal-form-input" type="tel" name="user_phone" required pattern="[0-9]{3}-[0-9]-{3}-[0-9]{2}-[0-9]{2}" title="xxxxxxxxxx">
+                </label>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc">Email</span>
+                    <input class="modal-form-input" type="email" name="user_email" required>
+                </label>
+                <label class="modal-form-field">
+                    <span class="modal-form-input-desc"></span>
+                    <textarea class="modal-form-message" name="" id="" cols="30" rows="10" placeholder="Text input"></textarea>
+                </label>
+                <input id="user-policy" class="modal-form-check" type="text">
+                <label class="modal-form-check-desc" for="user-policy">I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+                <button class="modal-form-submit" type="submit">Send</button>
+            </form>
         </div>
     </div>
 
