--- a/index.html
+++ b/index.html
@@ -344,25 +344,45 @@
                 </svg>
             </button>
             <form class="modal-form">
-                <p>Leave your contacts and we will call you back</p>
+                <p class="contacts">Leave your contacts and we will call you back</p>
                 <label class="modal-form-field">
                     <span class="modal-form-input-desc">Name</span>
-                    <input class="modal-form-input" type="text" name="user_name" required pattern="^[a-zA-Zа-яА-Я]+$">
+                    <span class="modal-form-input-wrapper">
+                        <input class="modal-form-input" type="text" name="user_name" required pattern="^[a-zA-Zа-яА-Я]+$">
+                        <svg class="modal-form-input-icon">
+                            <use href="./images/symbol-defs.svg#icon-person"></use>
+                        </svg>
+                    </span>
                 </label>
                 <label class="modal-form-field">
                     <span class="modal-form-input-desc">Phone</span>
-                    <input class="modal-form-input" type="tel" name="user_phone" required pattern="[0-9]{3}-[0-9]-{3}-[0-9]{2}-[0-9]{2}" title="xxxxxxxxxx">
+                    <span class="modal-form-input-wrapper">
+                        <input class="modal-form-input" type="tel" name="user_phone" required pattern="[0-9]{3}-[0-9]-{3}-[0-9]{2}-[0-9]{2}" title="xxxxxxxxxx">
+                        <svg class="modal-form-input-icon">
+                            <use href="./images/symbol-defs.svg#icon-phone"></use>
+                        </svg>
+                    </span>
                 </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-input-desc">Email</span>
-                    <input class="modal-form-input" type="email" name="user_email" required>
+                    <span class="modal-form-input-desc">Email</span><span class="modal-form-input-wrapper">
+                        <input class="modal-form-input" type="email" name="user_email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                        <svg class="modal-form-input-icon">
+                            <use href="./images/symbol-defs.svg#icon-email"></use>
+                        </svg>
+                    </span>
                 </label>
                 <label class="modal-form-field">
-                    <span class="modal-form-input-desc"></span>
-                    <textarea class="modal-form-message" name="" id="" cols="30" rows="10" placeholder="Text input"></textarea>
+                    <span class="modal-form-input-desc">Comment</span>
+                    <textarea class="modal-form-message" name="user_message" placeholder="Text input"></textarea>
                 </label>
-                <input id="user-policy" class="modal-form-check" type="text">
-                <label class="modal-form-check-desc" for="user-policy">I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+                <input id="user-policy" class="modal-form-check" type="checkbox" name="user_policy">
+                <label class="modal-form-check-desc" for="user-policy">
+                    <span class="modal-form-fake-check">
+                        <svg class="modal-form-check-icon" width="10px" height="8px">
+                            <use href="./images/symbol-defs.svg#icon-ok"></use>
+                        </svg>
+                    </span>
+                    I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
                 <button class="modal-form-submit" type="submit">Send</button>
             </form>
         </div>
