--- a/portfolio.html
+++ b/portfolio.html
@@ -192,6 +192,14 @@
                     </li>
                 </ul>
             </div>
+                        <div class="form-subscribe">
+                <p class="text-form">Subscribe</p>
+                <form class="footer-form">
+                    <label for="email" class="modal-form-field"></label>
+                    <input id="email" class="modal-form-input-footer" type="email" name="user_email" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">     
+                    <button class="modal-form-submit submit-footer" type="submit">Subscribe</button>  
+                </form>
+            </div>
         </div>
     </footer>
 </body>
