--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <p class="text-form">Subscribe</p>
                 <form class="footer-form">
                     <!-- <label for="email" class="modal-form-field"></label> -->
-                    <input aria-labelledby="email" id="email" class="modal-form-input-footer" type="email" name="user_email" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">     
+                    <input aria-label="email" id="email" class="modal-form-input-footer" type="email" name="user_email" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">     
                     <button class="modal-form-submit submit-footer" type="submit">Subscribe</button>  
                 </form>
             </div>
